--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,12 +16,12 @@
 
   <body>
 <nav>
-    Services
-    Product
-    Vision
-    Features
-    About
-    Contact
+      Services
+      Product
+         Vision
+            Features
+              About
+                Contact
 
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
@@ -34,8 +34,10 @@
 
     <button> Get Started </button>
 
-    <img src="img/header-img.png" alt="Image of a code snippet.">
-  </header>
+    <div class="img-move"><img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+    </header>
+
 
 
 <section class= "top-content">
