--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -15,54 +15,75 @@
 </head>
 
   <body>
-<nav>
-      Services
-      Product
-         Vision
-            Features
-              About
-                Contact
+<div class="topnav">
+  <a class="active" href="#Services">Services </a>
+  <a href="#Product">Product</a>
+    <a href="#Vision">Vision</a>
+      <a href="#Features">Features</a>
+        <a href="#About">About</a>
+          <a href="#Contact">Contact</a>
 
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</div>
 
-</nav>
+
 <header>
-    <h1> Innovation
-    On
+
+    <div id= "sidebyside">
+<div id ="h1-left"> 
+  <h1> Innovation <br>
+    On <br>
     Demand
-    </h1>
-
-    <button> Get Started </button>
-
-    <div class="img-move"><img src="img/header-img.png" alt="Image of a code snippet.">
+</h1>
+      <br>
+  <button> Get Started </button>
   </div>
-    </header>
+
+  <div id ="img-right"><img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+  </div>
+  </header>
+  
+
+<hr>
+
+  <section class="container">
+    <div class="one">
+  <h4>Features</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+  </div>
 
 
+  <div class="two">
+    <h4>About</h4>
+   <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+</p>
+</div>
 
-<section class= "top-content">
-    Features
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </section>
 
-
-    About
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-</section>
 
 
   
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     
   <section class= "bottom-content">
-    Services
+    <h4>Services</h4>
+    <p>
     Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </p>
 
 
-    Product
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <h4>Product</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis. 
 
-    Vision
-    Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    </p>
+
+    <h4>Vision</h4>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+
+    </p>
   </section>
 
   <section class="contact">
